[project]
name = "github-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pygithub>=2.8.1",
    "rich>=14.2.0",
    "tree-sitter-language-pack>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
